improve project structure

--- a/raport.ipynb
+++ b/raport.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "from algorithms.risk_measures import *\n",
     "\n",
-    "from data import load_stock_quotations\n",
+    "from data_loader import load_stock_quotations\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = [20, 5]"
