new tests for wig20

--- a/moead.ipynb
+++ b/moead.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "    plt.xlabel('Risk')\n",
     "    plt.ylabel('Return')\n",
     "    plt.title(f\"MOEA/D: iterations: {moead_kwargs['number_of_iterations']}, normalized: {moead_kwargs['normalize']}\\n\")\n",
-    "    plt.scatter(stock_risk, stock_returns_mean, c='gray')\n",
+    "    plt.scatter(stock_risk, stock_returns_mean, c='gray', label='Basic stocks')\n",
     "\n",
     "    moead_result = moead(objective_function=objective_function,\n",
     "                         chromosome_length=number_of_stocks,\n",
@@ -107,9 +107,9 @@
     "\n",
     "    pareto_front_moead = objective_function(moead_result)\n",
     "\n",
-    "    plt.scatter(pareto_front_moead[:,0], -pareto_front_moead[:,1], c='r')\n",
+    "    plt.scatter(pareto_front_moead[:,0], -pareto_front_moead[:,1], c='r', label='MOEA/D')\n",
     "\n",
-    "    plt.legend(['Basic stocks', 'MOEA/D'])\n",
+    "    plt.legend()\n",
     "    plt.show()"
    ]
   },
