--- a/nsga2_wigXL.ipynb
+++ b/nsga2_wigXL.ipynb
@@ -12,7 +12,7 @@
     "from algorithms.NSGA2 import nsga2\n",
     "import algorithms.NSGA2.evolutionary_operators as nsga2_operators\n",
     "\n",
-    "from algorithms.risk_measures import *\n",
+    "from algorithms.risk_measures import semi_variance\n",
     "\n",
     "from data_loader import load_stock_quotations\n",
     "\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +41,8 @@
     "\n",
     "stock_returns_mean = last_returns.mean() # predicted return for next day\n",
     "\n",
-    "# variance as risk\n",
-    "stock_returns_var = last_returns.var() # risk\n",
-    "stock_returns_cov = last_returns.cov() # covariance matrix\n",
-    "\n",
     "# semi-variance as risk\n",
-    "stock_returns_semi_var = semi_variance(last_returns)\n",
-    "stock_returns_semi_cov = semi_covariance_matrix(np.array(last_returns))\n",
+    "stock_returns_semi_var = semi_variance(np.array(last_returns).T)\n",
     "\n",
     "number_of_stocks = stock_returns.shape[1]"
    ]
@@ -69,15 +64,11 @@
     "    return X @ stock_returns_mean\n",
     "\n",
     "\n",
-    "def portfolio_risk_var(X):\n",
-    "    return np.diag(X @ stock_returns_cov @ X.T)\n",
-    "\n",
-    "\n",
     "def portfolio_risk_semi_var(X):\n",
-    "    return np.diag(X @ stock_returns_semi_cov @ X.T)\n",
+    "    return semi_variance(X @ np.array(last_returns).T)\n",
     "\n",
     "\n",
-    "def portfolio_objective_function(risk_function=portfolio_risk_var,\n",
+    "def portfolio_objective_function(risk_function=portfolio_risk_semi_var,\n",
     "                                 return_function=portfolio_return_value):\n",
     "    return lambda X: np.c_[risk_function(X), -return_function(X)]"
    ]
