--- a/wigXL.ipynb
+++ b/wigXL.ipynb
@@ -15,7 +15,7 @@
     "from algorithms.MOEAD import moead, default_weight_vectors\n",
     "import algorithms.MOEAD.evolutionary_operators as moead_operators\n",
     "\n",
-    "from algorithms.risk_measures import *\n",
+    "from algorithms.risk_measures import semi_variance\n",
     "\n",
     "from data_loader import load_stock_quotations\n",
     "\n",
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_quotations = load_stock_quotations(stock_names_file='data/NAZWY.txt')\n",
+    "stock_quotations = load_stock_quotations('data/NAZWY.txt')\n",
     "\n",
     "delta_t = 90\n",
     "stock_returns = stock_quotations.xs('close', level=1, axis=1).pct_change()\n",
@@ -44,13 +44,8 @@
     "\n",
     "stock_returns_mean = last_returns.mean() # predicted return for next day\n",
     "\n",
-    "# variance as risk\n",
-    "stock_returns_var = last_returns.var() # risk\n",
-    "stock_returns_cov = last_returns.cov() # covariance matrix\n",
-    "\n",
     "# semi-variance as risk\n",
-    "stock_returns_semi_var = semi_variance(last_returns)\n",
-    "stock_returns_semi_cov = semi_covariance_matrix(np.array(last_returns))\n",
+    "stock_returns_semi_var = semi_variance(np.array(last_returns).T)\n",
     "\n",
     "number_of_stocks = stock_returns.shape[1]"
    ]
@@ -92,12 +87,8 @@
     "    return X @ stock_returns_mean\n",
     "\n",
     "\n",
-    "def portfolio_risk_var(X):\n",
-    "    return np.diag(X @ stock_returns_cov @ X.T)\n",
-    "\n",
-    "\n",
     "def portfolio_risk_semi_var(X):\n",
-    "    return np.diag(X @ stock_returns_semi_cov @ X.T)\n",
+    "    return semi_variance(X @ np.array(last_returns).T)\n",
     "\n",
     "\n",
     "def portfolio_objective_function(risk_function=portfolio_risk_semi_var,\n",
