--- a/nsga2_wig20.ipynb
+++ b/nsga2_wig20.ipynb
@@ -12,7 +12,7 @@
     "from algorithms.NSGA2 import nsga2\n",
     "import algorithms.NSGA2.evolutionary_operators as nsga2_operators\n",
     "\n",
-    "from algorithms.risk_measures import *\n",
+    "from algorithms.risk_measures import semi_variance\n",
     "\n",
     "from data_loader import load_stock_quotations\n",
     "\n",
@@ -46,8 +46,7 @@
     "stock_returns_cov = last_returns.cov() # covariance matrix\n",
     "\n",
     "# semi-variance as risk\n",
-    "stock_returns_semi_var = semi_variance(last_returns)\n",
-    "stock_returns_semi_cov = semi_covariance_matrix(np.array(last_returns))\n",
+    "stock_returns_semi_var = semi_variance(np.array(last_returns).T)\n",
     "\n",
     "number_of_stocks = stock_returns.shape[1]"
    ]
@@ -74,10 +73,10 @@
     "\n",
     "\n",
     "def portfolio_risk_semi_var(X):\n",
-    "    return np.diag(X @ stock_returns_semi_cov @ X.T)\n",
+    "    return semi_variance(X @ np.array(last_returns).T)\n",
     "\n",
     "\n",
-    "def portfolio_objective_function(risk_function=portfolio_risk_var,\n",
+    "def portfolio_objective_function(risk_function=portfolio_risk_semi_var,\n",
     "                                 return_function=portfolio_return_value):\n",
     "    return lambda X: np.c_[risk_function(X), -return_function(X)]"
    ]
