--- a/semi_variance_fix.ipynb
+++ b/semi_variance_fix.ipynb
@@ -519,7 +519,7 @@
    "source": [
     "$X$ - populacja, każdy wiersz to osobnik (portfel) - wektor 20-wymiarowy\n",
     "\n",
-    "$L$ (zmienna `last_returns`) - stopy zwrotu poszczególnych spółek w poszczególnych dniach, element $R_{i,j}$ ($i$-ty wiersz, $j$-ta kolumna) to zwrot $j$-tej spółki w dniu $t_i$.\n",
+    "$L$ (zmienna `last_returns`) - stopy zwrotu poszczególnych spółek w poszczególnych dniach, element $L_{i,j}$ ($i$-ty wiersz, $j$-ta kolumna) to zwrot $j$-tej spółki w dniu $t_i$.\n",
     "Macierz $L$ jest wymiaru liczba_dni $\\times$ liczba_spółek, w tym przypadku $90 \\times 20$\n",
     "\n",
     "Stąd macierz $R = XL^T$ ma na pozycji $R_{i,j}$ iloczyn skalarny $i$-tego wiersza $X$ z $j$-tą kolumną $L^T$, czyli $j$-tym wierszem $L$. Jest to zatem iloczyn skalarny $i$-tego portfela z wektorem stóp zwrotu poszczególnych spółek w dniu $t_j$, czyli zwrot $i$-tego portfela w dniu $t_j$.\n",
